--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@ layout: compress
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
   <head>
     
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-PHTKZG7"></script>
+    
               <!-- Google Tag Manager -->
           <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
